--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -43,8 +43,11 @@
     
 }
 
-#button:hover{
-    background-color: whitesmoke;
-    color: black;
-    border: 1px solid black;
+#error{
+    color: red;
+    font-size: small;
+    font-weight: bold;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-top: 5px;
+    transition: all 2s ease-in-out;
 }
